# Raman-Spectroscopy-Analysis-Application

./: .gitignore  .readthedocs-ja.yaml  .readthedocs.en.yaml  .readthedocs.ja.yaml  .readthedocs.yaml  FINAL_TEST_INSTRUCTIONS.md  MULTI_GROUP_DIALOG_FIX.md  README.md  ROOT_CAUSE_FIXED.md  TEST_CREATE_GROUP.md  TEST_MULTI_GROUP_DIALOG_FIX.md  build_config_report.json  dev_runner.py  main.py  pyproject.toml  raman_app.spec  raman_app_installer.nsi  raman_app_installer.spec  smoke_tests.py  splash_screen.py  test.py  test_results.txt  utils.py  verify_create_group_fix.py  verify_debug_statements.py
.AGI-BANKS/: BASE_MEMORY.md  CACHE_CONTEXT.json  IMPLEMENTATION_PATTERNS.md  LOCALIZATION_PATTERN.md  MEMORY_UPDATE_SUMMARY.md  RECENT_CHANGES.md  RECENT_CHANGES_20251119_analysis_ux_pca_fixes.md  RECENT_CHANGES_20251120_analysis_debug_improvements.md  RECENT_CHANGES_20251120_analysis_page_ux_overhaul.md  RECENT_CHANGES_20251120_session2_addendum.md  RECENT_CHANGES_20251123_analysis_dataset_card.md  RECENT_CHANGES_analysis_page_v2.md  UI_TITLE_BAR_STANDARD.md  _QUESTION.md  _QUESTION_PROMPT.md
.AGI-BANKS/RECENT_CHANGES/: 2025-01-21_0001_pca_ui_improvements.md  2025-12-03_0001_pca_viz_p0_fixes.md  2025-12-03_0002_pca_viz_complete.md  2025-12-04_0001_pca_viz_enhancements.md  2025-12-04_0002_dimension_mismatch_and_tsne_colors.md  2025-12-04_0003_heatmap_display_fix.md  2025-12-04_0004_analysis_visualization_fixes.md  2025-12-18_0001_analysis_page_improvements.md  2025-12-18_0002_critical_fixes.md  2025-12-18_0003_multi_group_creation.md  2025-12-18_0004_fix_group_creation_button.md  2025-12-18_0005_comprehensive_improvements.md  2025-12-18_0006_persistent_bugs_resolution.md  index.json
.code_reference/notebook_utils/: ML_migration_guide.md  ML_model.bkp  ML_model_biomarker.py  ML_model_refactored.py  __init__.py  __utils__.py  data_leakage_check.py  data_preparer.py  mutual_info.py  visualize.py
.docs/: COMMIT_MESSAGE.md  USER_ACTION_GUIDE.md  robust_type_validation_system.md
.docs/building/: BUILD_FIXES_AND_GUIDE.md  BUILD_FIXES_PHASE6.md  BUILD_PHASE4_COMPLETE.md  BUILD_QUICK_START.md  BUILD_STATUS.md  BUILD_SYSTEM_ENHANCEMENTS.md  DOCUMENTATION_INDEX.md  FINAL_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_20251022.md  OPTIMIZATION_SUMMARY.md  PATH_RESOLUTION_FIX.md  PYINSTALLER_GUIDE.md  QUICK_START_OPTIMIZED.md  READY_TO_BUILD.md  STARTUP_OPTIMIZATION_GUIDE.md  TROUBLESHOOTING.md  VISUAL_GUIDE.md
.docs/enhancements/: 2025-11-21_matplotlib_widget_enhancements.md  2025-11-25_ui_ux_improvements.md  group_persistence_implementation.md  peak_annotation_enhancement.md
assets/: SPLASH_IMAGE_REQUIREMENTS.md
build_scripts/: build_config_report.json  build_installer.ps1  build_optimized_portable.ps1  build_portable.ps1  build_portable.sh  generate_app_icon.py  generate_build_configs.py  test_build_executable.py
components/: app_tabs.py  page_registry.py  toast.py
configs/: app_configs.json  configs.py  user_settings.py
docs/: changelog.md  conf.py  faq.md  faq_ja.md  glossary.md  glossary_ja.md  index.md  quick-start_ja.md  references.md  requirements.txt  troubleshooting.md  troubleshooting_ja.md
functions/: ML_legacy.py  ML_old.py  _utils_.py  andorsdk.py  configs.py  data_loader.py  noise_func.py
pages/: __init__.py  analysis_page.py  analysis_page_old.py  data_package_page.py  exploratory_analysis_page.py  home_page.py  machine_learning_page.py  modeling_classification_page.py  preprocess_page.py  workspace_page.py
readme/: DEVELOPMENT_GUIDELINES.md  README_EN.md  README_JA.md
scripts/: setup_translations.ps1
test_script/: build_test_results_20251021_151512.json  check_fabc_signature.py  deep_analysis_failing_methods.py  test_fabc_fix.py  test_fabc_type_conversion.py  test_parameter_types.py  test_preprocessing_comprehensive.py  test_preprocessing_functional.py  test_preprocessing_methods.py  verify_fabc_signature.py
tests/: verify_analysis_enhancements.py
(+303 files in other folders)
