[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raman-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "annotated-types",
    "anyio",
    "cloudpickle",
    "colorama",
    "contourpy",
    "cvxopt",
    "cycler",
    "fonttools",
    "idna",
    "imageio",
    "importlib-metadata",
    "joblib",
    "kiwisolver",
    "lazy-loader",
    "lime",
    "llvmlite",
    "matplotlib",
    "networkx",
    "numba",
    "numpy",
    "onnxruntime>=1.23.2",
    "packaging",
    "pandas",
    "pillow",
    "pybaselines",
    "pydantic",
    "pydantic-core",
    "pyinstaller>=6.16.0",
    "pyparsing",
    "pyside6",
    "pyside6-addons",
    "pyside6-essentials",
    "pysptools",
    "python-dateutil",
    "pytz",
    "ramanspy",
    "renishawwire",
    "scikit-image",
    "scikit-learn",
    "xgboost",
    "scipy",
    "seaborn",
    "shap",
    "shiboken6",
    "six",
    "skl2onnx>=1.19.1",
    "slicer",
    "sniffio",
    "statsmodels>=0.14.5",
    "threadpoolctl",
    "tifffile",
    "tomli>=2.3.0",
    "tqdm",
    "typing-extensions",
    "typing-inspection",
    "tzdata",
    "umap-learn>=0.5.9.post2",
    "wget",
    "zipp",
]

[project.optional-dependencies]
dev = [
    "watchdog",
    "pytest",
    "black",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx_rtd_theme>=2.0.0",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=1.0.0",
    "myst-parser>=2.0.0",
    "linkify-it-py>=2.0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["components*", "configs*", "functions*", "pages*"]
exclude = ["tests*", "docs*", "build_scripts*", "assets*", "readme*", ".AGI-BANKS*", ".docs*"]

[tool.pytest.ini_options]
# Collect tests only from the dedicated test suite folder.
# The repository also contains legacy build scripts and ad-hoc test scripts that
# are not intended to be collected by pytest and may require optional deps.
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = [
    "build",
    "dist",
    "build_scripts",
    "test_script",
    "projects",
    ".venv",
    "__pycache__",
]
